--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-build-run-push",
-  "version": "1.2.1",
+  "version": "1.2.1-lt",
   "description": "Build, run and push your project based on your package.json details",
   "repository": {
     "type": "git",
